--- a/_config.yml
+++ b/_config.yml
@@ -104,12 +104,12 @@ author:
   name             : "Moon Seokjun"
   avatar           : "/assets/images/profile.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Hello World!"
-  location         : "South Korea"
+  location         : "Seoul, South Korea"
   email            : "msjun23@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:msjun23@gmail.com"
+      #url: "mailto:msjun23@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
