--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
   - title: "About"
     url: /about/
   - title: "Projects"
-    url: /projects/
+    url: /categories/projects/
   - title: "Categories"
     url: /categories/
   - title: "Tags"
@@ -16,4 +16,3 @@ main:
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
-  
