--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ analytics:
 author:
   name             : "Moon Seokjun"
   avatar           : "/assets/images/profile.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Hello World!"
+  bio              : "You`re better than your thought!"
   location         : "Seoul, South Korea"
   email            : # "msjun23@gmail.com"
   links:
